added exception handling
added handling in format:

       {
            “status”: ${responseCode}
            “message”: ${whyHasItHappened}
        }
and refactored code to be more clean
TODO: testing